--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     
     <hr style="margin: 40px 0; border: none; border-top: 1px solid #ddd;">
     
-    <p style="color: #666; font-size: 0.9em;">© 2025 CoffeeAtlas. All rights reserved.</p>
+    <p style="color: #666; font-size: 0.9em;">© 2025 Can Basci. All rights reserved.</p>
     <p style="color: #666; font-size: 0.9em;"><a href="https://github.com/CanBASCI/coffeeatlas-support">View on GitHub</a></p>
 </body>
 </html>
