--- a/privacy.html
+++ b/privacy.html
@@ -143,7 +143,7 @@
     
     <hr style="margin: 40px 0; border: none; border-top: 1px solid #ddd;">
     
-    <p style="color: #666; font-size: 0.9em;">© 2025 CoffeeAtlas. All rights reserved.</p>
+    <p style="color: #666; font-size: 0.9em;">© 2025 Can Basci. All rights reserved.</p>
     <p style="color: #666; font-size: 0.9em;"><a href="index.html">Back to Support</a> | <a href="https://github.com/CanBASCI/coffeeatlas-support">View on GitHub</a></p>
 </body>
 </html>
