Update privacy policy: Change age rating from 9+ to 13+ and add alcohol content information

--- a/privacy.html
+++ b/privacy.html
@@ -107,7 +107,7 @@
     </ul>
     
     <h2>6. Children's Privacy</h2>
-    <p>CoffeeAtlas is rated 9+ and is not directed to children under the age of 9. We do not knowingly collect personal information from children. If you are a parent or guardian and believe your child has provided us with personal information, please contact us.</p>
+    <p>CoffeeAtlas is rated 13+ and is not directed to children under the age of 13. The app contains infrequent references to alcohol (in coffee recipes such as Irish Coffee). Users under 18 years of age will see age restriction warnings for alcoholic content. We do not knowingly collect personal information from children. If you are a parent or guardian and believe your child has provided us with personal information, please contact us.</p>
     
     <h2>7. Data Security</h2>
     <p>Since all data is stored locally on your device, data security is managed by iOS:</p>
